--- a/src/index.css
+++ b/src/index.css
@@ -92,7 +92,7 @@
   /* Static text */
   .static-text {
     @apply text-[2rem] md:text-[2rem] lg:text-[3rem] font-black leading-none tracking-tight;
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Bricolage Grotesque", sans-serif;
   }
 
   /* Rotating text wrapper */
@@ -138,7 +138,7 @@
   .rotating-text {
     @apply text-[1rem] md:text-[1rem] lg:text-[2rem] font-black tracking-tight;
     /* color: hsl(var(--hero-red)); */
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Bricolage Grotesque", sans-serif;
     display: flex;
     align-items: center;
     white-space: nowrap;
@@ -294,7 +294,7 @@
   }
 
   .font-montserrat {
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Bricolage Grotesque", sans-serif;
   }
 }
 
@@ -410,4 +410,9 @@
   100% {
     opacity: 0;
   }
+}
+
+
+*{
+  font-family: "Bricolage Grotesque", sans-serif; 
 }
