--- a/src/components/sections/ScrollStack.css
+++ b/src/components/sections/ScrollStack.css
@@ -29,7 +29,7 @@
 .scroll-stack-inner {
     position: relative;
     width: 100%;
-    padding-top: 20px;
+    /* padding-top: 20px; */
 }
 
 /* Stack cards */
