--- a/src/components/sections/Ourservices.css
+++ b/src/components/sections/Ourservices.css
@@ -1,5 +1,8 @@
-/* Sections */
-.services,
+.services {
+    padding: 80px 0;
+    border-top: 1px solid rgba(255, 255, 255, 0.05);
+}
+
 .process,
 .work,
 .reviews,
