Updated spacing (Ismail)

--- a/src/components/sections/ScrollStack.css
+++ b/src/components/sections/ScrollStack.css
@@ -15,7 +15,7 @@
     line-height: 1.5;
     font-family: "Bricolage Grotesque", sans-serif;
     box-sizing: border-box;
-    margin-bottom: 24px;
+    margin-bottom: 0;
 }
 
 /* Scroll stack wrapper */
